2009-05-20  Satoshi Konno <skonno@cybergarage.org>
	* Improved cg_string_*() not to abort when the specified string object is NULL.
	* Added cg_upnp_device_getsmallesticonbymimetype().
	* Added cg_upnp_device_addicon().
	* Added CGUpnpDevice:setDeviceType().

2009-04-23  Satoshi Konno <skonno@cybergarage.org>
	* Added DLNA-CP-version in the USER-AGENT HTTP header value as default.

2009-01-29  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_net_uri_rebuild() and cg_net_url_rebuild().
	* Fixed cg_upnp_service_mangleurl() to return correct url using cg_net_uri_rebuild() when a device has URLBase and the service's URL is relative.
	* Changed cg_upnp_controlpoint_parsescservicescpd() to read the service description internally because the some illegal devices, such as MediaLink, don't return the specified service description.

2008-12-08  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_upnp_device_getsmallesticon().
	* Added cg_upnp_device_getabsoluteiconurl().
	* Added cg_net_uri_setvalue() and cg_net_uri_getvalue().
	* Deprecated cg_net_uri_set().
	* Added CGUpnpDevice:urlBase().
	* Added CGUpnpDevice:smallestIcon().
	* Added CGUpnpDevice:absoluteIconUrl().
	
2008-11-18  Satoshi Konno <skonno@cybergarage.org>
	* Changed cg_http_request_post_main() to write the first line at a time because SIGPIPE occurred on some HTTP server such as Flickr.

2008-10-31  Satoshi Konno <skonno@cybergarage.org>
	* v2.3
	* Added UPnP/AV package in std/av as a sample implementation.

2008-09-26 Satoshi Konno <skonno@cybergarage.org>
	* Fixed the following methods correctly
	  cg_upnp_device_setmanufacture() -> cg_upnp_device_setmanufacturer()
	  cg_upnp_device_getmanufacture() -> cg_upnp_device_getmanufacturer()
	  cg_upnp_device_setmanufactureurl() -> cg_upnp_device_setmanufacturerurl()
	  cg_upnp_device_getmanufactureurl() -> cg_upnp_device_getmanufacturerurl()
	* Fixed cg_net_uri_unescapestring() to compile normally on WIN32 platforms.